--- a/styles.css
+++ b/styles.css
@@ -34,7 +34,7 @@
 
 .cover{
     min-width:150px;
-    height: 100px;
+    height: 150px;
     background-color: #000;
     margin:10px;
     cursor: pointer;
@@ -43,6 +43,8 @@
     background-size: cover;
     background-repeat: no-repeat; 
     transition:all 2s ease;
+    /* background: url(background.png) 0 0 repeat; */
+    /* transform: rotate(90deg); */
 }
 
 /* teams */
@@ -51,7 +53,7 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    height: 500px;
+    height: 700px;
 }
 
 .team{
@@ -60,6 +62,7 @@
     text-align: center;
     margin-right: 10px;
     max-height: 150px;
+    margin-bottom: 70px;
 }
 
 .team img{
