--- a/styles.css
+++ b/styles.css
@@ -70,7 +70,7 @@
 }
 
 .flip{
-    transform: rotateY(360deg);
+    transform: perspective(400px) rotateY(360deg);
     /*backface-visibility: hidden;*/
     
 }
